# specsheet

./: .isort.cfg  CHANGELOG.md  pyproject.toml
.gitlab/issue_templates/: Research-based.md  Security-based.md  Task-based.md
specsheet/: Homepage.py
specsheet/assets/css/: styles.css
specsheet/pages/: Cart.py  Products.py
specsheet/pdf_generator/: pdf_generator.py
specsheet/utils/: components.py  database.py  image_utils.py  styles.py
