[tool.poetry]
name = "specsheet"
version = "0.1.0"
description = ""
authors = ["Lenard Luke Llanillo <luke@neoalphaglobal.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
streamlit = "^1.36.0"
fpdf = "^1.7.2"
pillow = "^10.4.0"

[tool.poetry.group.dev.dependencies]
mysql-connector = "^2.2.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
